# PolkaStamp

./: .env.example  .gitignore  .prettierignore  .vercelignore  README.md  docker-compose.yml  eslint.config.js  middleware.ts  next.config.ts  package.json  papi-config.ts  pnpm-lock.yaml  tsconfig.json  vercel.json
.papi/: polkadot-api.json
.papi/contracts/: credential_nft.json  did_registry.json  subscription_manager.json
.papi/descriptors/: .gitignore
app/: globals.css  layout.tsx  not-found.tsx
app/(auth)/: actions.ts
app/(auth)/connect-wallet/: page.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/dashboard/: page.tsx
app/(dashboard)/pricing/: submit-button.tsx
app/(tools)/balance/: page.tsx
app/(tools)/issuers/: page.tsx
app/(tools)/key-converter/: page.tsx
app/(tools)/verify/: page.tsx
blockchain/: .env.example  Cargo.toml  README.md  extract.rs  lib.rs
blockchain/contracts/credential_nft/: Cargo.toml
blockchain/contracts/credential_nft/src/: lib.rs
blockchain/contracts/credential_nft/tests/: payload_param.rs
blockchain/contracts/did_registry/: Cargo.toml
blockchain/contracts/did_registry/src/: lib.rs
blockchain/contracts/did_registry/tests/: address_param.rs
blockchain/contracts/subscription_manager/: Cargo.toml
blockchain/contracts/subscription_manager/src/: lib.rs
chains/: localnode.json
components/: site-header.tsx
components/account/: account-balance.tsx  view-select-account.tsx  view-select-wallet.tsx  wallet-select.tsx  wallets.ts
components/auth/: wallet-onboard-modal.tsx  wallet-onboard-mount.tsx
components/chain/: chain-info.tsx  chain-select.tsx
components/dashboard/: create-did-page.tsx  register-did-page.tsx  require-did-gate.tsx
components/dashboard/admin/: issuers-table.tsx
components/dashboard/candidate/: add-credential-dialog.tsx  credentials-table.tsx  profile-detailed-view.tsx  skill-passes-table.tsx
components/dashboard/issuer/: credential-actions.tsx
components/dashboard/recruiter/: credentials-table.tsx
components/issuer-directory/: issuers-table.tsx
components/landing/: cta-section.tsx  deep-dive-section.tsx  demo-section.tsx  features-section.tsx  hero-section.tsx  overview-section.tsx  workflow-section.tsx
components/layout/: footer.tsx  nav-bar.tsx  nav-mobile-control.tsx  nav-mobile.tsx  theme-toggle.tsx
components/pricing/: pricing-grid.tsx
components/ui/: alert-dialog.tsx  dialog.tsx  multi-view-dialog.tsx  polkadot-logo.tsx
icons/: logos.tsx
lib/: config.ts  contract-utils.ts  credential-nft.ts  did-registry.ts  format-balance.ts  ink-helpers.ts  is-mobile.ts  platform-signer.ts  subscription-manager.ts  utils.ts
lib/auth/: guards.ts  middleware.ts  session.ts
lib/constants/: auth.ts  blockchain.ts
lib/db/: health.ts  setup.ts
lib/db/migrations/: 0001_open_jackpot.sql
lib/db/queries/: admin-issuers.ts  queries.ts
lib/hooks/: use-account-balance.ts  use-block-number.ts  use-selected-address.ts
lib/payments/: pricing.ts
lib/resume/: resume-builder.ts
lib/services/: apillon-storage.ts
lib/types/: components.ts  index.ts  tables.ts  window-env.d.ts
lib/utils/: account-mapping.ts  address.ts  env.ts  ink-errors.ts  key-converter.ts  signature.ts
providers/: lightclient-api-provider.tsx  polkadot-extension-provider.tsx  providers.tsx  rpc-api-provider.tsx  theme-provider.tsx  worker.ts
static/: index.html  middleware.js
(+40 files in other folders)
