[package]
name = "polkastamp_contracts"
version = "0.1.0"
authors = ["PolkaStamp <dev@polkastamp.io>"]
edition = "2021"

[dependencies]
ink             = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }
scale           = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
primitive-types = { version = "0.13", default-features = false, features = ["codec"] }
scale-info      = { version = "2.11", default-features = false, features = ["derive"] }
sp-core         = { version = "33", default-features = false, features = ["std"] }   # SS58 ↔ H160
hex             = "0.4"                                                              # byte → hex
anyhow          = { version = "1.0", optional = true }
dotenvy         = { version = "0.15", optional = true }

# local contract crates
did_registry         = { path = "contracts/did_registry",         default-features = false }
credential_nft       = { path = "contracts/credential_nft",       default-features = false }
subscription_manager = { path = "contracts/subscription_manager", default-features = false }

[dev-dependencies]
ink_e2e = "6.0.0-alpha"

[lib]
path = "lib.rs"

[[bin]]
name = "instantiate_contracts"
path = "bin/instantiate.rs"
required-features = ["std"]

[[bin]]
name = "extract_address"
path = "bin/extract_address.rs"
required-features = ["std"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "primitive-types/std",
    "scale-info/std",
    "sp-core/std",
    "did_registry/std",
    "credential_nft/std",
    "subscription_manager/std",
    "anyhow",
    "dotenvy",
]
ink-as-dependency = []
e2e-tests = []