[package]
name = "credential_nft"
version = "0.1.0"
authors = ["PolkaStamp <dev@polkastamp.io>"]
edition = "2021"

[dependencies]
ink            = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }
scale          = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
primitive-types = { version = "0.13", default-features = false, features = ["codec"] }
scale-info     = { version = "2.11", default-features = false, features = ["derive"] }
bs58           = { version = "0.5", default-features = false, features = ["alloc"] }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "primitive-types/std",
    "scale-info/std",
    "bs58/std",
]
ink-as-dependency = []